# high_speed_panel

./: .gitignore  README.md
albany_install_configs/: README.md  albany_config.sh  blas_make.inc  boost_config.sh  gcc_7.1.0_config.sh  hdf5_config.sh  lapack_make.inc  netcdf_config.sh  openmpi_config.sh  parallel-netcdf_config.sh  parmetis_config.sh  scorec_config.sh  superlu_make.inc  swig_config.sh  trilinos_config.sh  yaml_config.sh  zlib_config.sh
beam_for_orazio/: beam_geom.csm  input.yaml  mesh_and_label_beam.geo
fenics_benchmarking/: beam_bending.py  calceig.py  fenics_iterative_solver_results.ods  iterative_solver_results.txt
fixed_fixed_bar/: bar_writeup.tex  do_tex.sh  fixed_bar_solution.m  temperature.m
hat_stiffened_panel_geom/: panel.csm
increase_smb_order/: CMakeLists.txt  do_config.sh
increase_smb_order/src/: CMakeLists.txt  increase_smb_order.cpp
linear_to_quad/: CMakeLists.txt  do_config.sh
linear_to_quad/src/: CMakeLists.txt  increase_smb_order.cpp  linear_to_quad.cpp
piston_theory_write_up/: piston_theory_weak_form.tex
rough_beam/: analytic_beam_frequencies.m  beam_cross_section.csm
tet10_with_creep/: comp_material.yaml  creep_input.yaml  input.yaml
tet_convergence/: AR_make_meshes.sh  AR_run_test.sh  back_up_input.yaml  base_assoc.txt  base_input.yaml  base_material.yaml  comp_material.yaml  count_dbc_lines.sh  exo_meshes_input.yaml  inputT.yaml  inputT_ikt.yaml  make_meshes.sh  material.yaml  read_mm_file.m  run_tests.sh
thermal_lin_elas_box/: README.md  box.geo  input.yaml  material.yaml  results.exo
(+380 files in other folders)
